--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                   <div class="count-box">
                     <i class="bi bi-award"></i>
                     <span data-purecounter-start="0" data-purecounter-end="230" data-purecounter-duration="4" class="purecounter"></span>
-                    <p><strong style="color: blue;">Members</strong>We take pride in our qualified team of dedicated professionals, ensuring personalized and expert service for every customer we serve.</p>
+                    <p><strong style="color: blue;">Members:</strong>We take pride in our qualified team of dedicated professionals, ensuring personalized and expert service for every customer we serve.</p>
                   </div>
                 </div>
               </div>
