--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
         <li class="dropdown">
           <a href="#"><span>Resources</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
-            <li><a href="Branches.php">Branches</a></li>
-            <li><a href="Withinhere.php">Withinhere</a></li>
-            <li><a href="CSR.php">CSR</a></li>
-            <li><a href="Scholarship.php">Scholarship Fund</a></li>
+            <li><a href="Branches.html">Branches</a></li>
+            <li><a href="Withinhere.html">Withinhere</a></li>
+            <li><a href="CSR.html">CSR</a></li>
+            <li><a href="Scholarship.html">Scholarship Fund</a></li>
             <!--<li><a href="Career.php">Career</a></li>-->
           </ul>
         </li>
@@ -169,8 +169,6 @@
 
       </div>
     </section><!-- End About Section -->
-
-    
 
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
@@ -275,9 +273,9 @@
         <div class="text-center">
           <h3>Have Questions or Need Assistance? Chat with Our Expert Now!</h3>
           <p>Engage with us in real-time through our convenient chatbot feature! 
-            Click on the chat icon below to ask any questions or seek assistance regarding our loan services. 
+            Click on the chat icon on the left of your screen to ask any questions or seek assistance regarding our loan rates, services and much more. 
             Experience the convenience of instant support - just a click away! Your financial journey starts with a conversation.</p>
-          <a class="cta-btn" href="#">Lets Chat</a>
+          <!--a class="cta-btn" href="#">Lets Chat</a-->
         </div>
 
       </div>
@@ -345,12 +343,13 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
+                <img src="assets/img/testimonials/testimonials1.jpg" class="testimonial-img" alt="">
+                <h3>Saul Phiri</h3>
                 <h4>Ceo &amp; Founder</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  "The professionalism of the Whence team stood out. They took the time to understand my financial needs, 
+                  customized a solution, and offered flexible repayment options that made the entire experience smooth and stress-free.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -358,12 +357,13 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
+                <img src="assets/img/testimonials/testimonials2.jpg" class="testimonial-img" alt="">
+                <h3>Bob Chiti</h3>
                 <h4>Designer</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  I'm grateful for the whence's transparent and straightforward approach. They guided me through the entire loan application, 
+                  ensuring I understood every detail, and the funds were disbursed promptly.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -371,12 +371,13 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
+                <img src="assets/img/testimonials/testimonials3.jpg" class="testimonial-img" alt="">
+                <h3>Conrad Mwitwa</h3>
                 <h4>Store Owner</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  Securing a loan for my daughter's education was a breeze with Whence. Their personalized approach and affordable
+                   interest rates allowed me to provide her with the best education possible, making dreams come true.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
@@ -384,25 +385,27 @@
 
             <div class="swiper-slide">
               <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
-                <p>
-                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
-                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                </p>
-              </div>
-            </div><!-- End testimonial item -->
-
-            <div class="swiper-slide">
-              <div class="testimonial-item">
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
+                <img src="assets/img/testimonials/testimonials4.jpg" class="testimonial-img" alt="">
+                <h3>Sharon Mumba</h3>
                 <h4>Entrepreneur</h4>
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  Facing an unforeseen medical situation, whence's compassion and efficiency were a lifeline. The quick 
+                  approval and disbursement of funds allowed me to focus on my health without worrying about the financial burden of medical bills.
+                  <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+
+            <div class="swiper-slide">
+              <div class="testimonial-item">
+                <img src="assets/img/testimonials/testimonials5.jpg" class="testimonial-img" alt="">
+                <h3>Jane Coner</h3>
+                <h4>Freelancer</h4>
+                <p>
+                  <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                  Reliable and trustworthy, Whence delivered on their promises. From the initial consultation to the final approval, 
+                  their commitment to customer satisfaction was evident, making them my go-to choice for any future financial needs.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
