--- a/Branches.html
+++ b/Branches.html
@@ -12,8 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>whencegroup</title>
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -49,7 +49,7 @@
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box" >
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;" >
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">ZIMCO HQ</a></h4>
               <p>Zimco House Building<br>
@@ -61,7 +61,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">KAMBENDEKELA</a></h4>
               <p>Kambendekela House Building<br>
@@ -73,7 +73,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">ANCHOR HSE</a></h4>
               <p>Anchor House<br>
@@ -85,20 +85,20 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">KABWE</a></h4>
               <p>
                 Mukuni House, 3rd Floor, Suite 382<br>
                 (+26) 0962 920883<br>
                 kabwe@whencegroup.com
-                </p>>
+                </p>
             </div>
           </div>
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">KITWE</a></h4>
               <p>Post Office Building<br>
@@ -110,7 +110,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">NDOLA</a></h4>
               <p>Compensation House<br>
@@ -122,7 +122,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">SOLWEZI</a></h4>
               <p>2nd Floor Independence Road<br>
@@ -134,7 +134,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">MANSA</a></h4>
               <p>Napsa Building<br>
@@ -148,7 +148,7 @@
           
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">KASAMA</a></h4>
               <p>Compensation House<br>
@@ -161,7 +161,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">CHIPATA</a></h4>
               <p>NAPSA Building<br>
@@ -174,7 +174,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="300">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">LIVINGSTONE</a></h4>
               <p>Mosi Oa Tunya House New Wing<br>
@@ -186,7 +186,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">MAZABUKA</a></h4>
               <p>Galaba House
@@ -199,7 +199,7 @@
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">KAFUE</a></h4>
               <p>Kafue House
@@ -210,7 +210,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">CHINGOLA</a></h4>
               <p>Compensation House
@@ -222,7 +222,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">CHOMA</a></h4>
               <p>Butala House
@@ -232,7 +232,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">PETAUKE</a></h4>
               <p>Adelaide Complex along Boma Road<br>
@@ -245,7 +245,7 @@
 
         <div class="row">
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">KALUMBILA</a></h4>
               <p>Banana 2, West Road T26/479<br>
@@ -254,7 +254,7 @@
           </div>
 
           <div class="col-xl-3 col-md-6 d-flex align-items-stretch mt-4 mt-xl-0" data-aos="zoom-in" data-aos-delay="400">
-            <div class="icon-box">
+            <div class="icon-box" style="border: 0px solid rgba(0, 0, 0, 0); border-radius: 0px;">
               <div class="icon"><i class="bx bxs-business"></i></div>
               <h4><a href="">MONGU</a></h4>
               <p>Napsa Building
