--- a/Withinhere.html
+++ b/Withinhere.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>whencegroup</title>
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/logo.png" rel="icon">
+  <link href="assets/img/logo.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -58,7 +58,7 @@
                 <h4>Under 100</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
@@ -72,7 +72,7 @@
                 <h4>Under 500</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
@@ -86,7 +86,7 @@
                 <h4>Under 100</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
@@ -100,7 +100,7 @@
                 <h4>Under 300</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
@@ -114,7 +114,7 @@
                 <h4>Under 500</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
@@ -128,7 +128,7 @@
                 <h4>Under 100</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
@@ -142,7 +142,7 @@
                 <h4>Under 300</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 1"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
@@ -156,7 +156,7 @@
                 <h4>Under 300</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
@@ -170,7 +170,7 @@
                 <h4>Under 500</h4>
                 <p>Product</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Productname"><i class="bx bx-plus"></i></a>
                   <!--<a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>-->
                 </div>
               </div>
