--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <header id="header" class="fixed-top">
   <div class="container d-flex align-items-center justify-content-between">
     <!-- Mobile Toggle Button -->
-    <button type="button" class="mobile-nav-toggle">&#9776;</button>
+    <button type="button" class="mobile-nav-toggle" >&#9776;</button>
     
     <!-- Logo -->
     <a href="index.html" class="logo me-auto me-lg-0">
@@ -58,7 +58,7 @@
 
     <!-- Logo Text -->
     <h1 class="logo me-auto me-lg-0" style="font-size: 25px; margin-left: -50px; padding: 0; line-height: 1; font-weight: 700; letter-spacing: 2px; text-transform: uppercase;">
-      <a href="index.html" style="color: #fff;">Whence Financial Services<span style="color: #ffc451;">.</span></a>
+      <a href="index.html" style="background-color: linear-gradient(to right, #FFA500, #00FF00, #0000FF); font-size: 16px;">Whence Financial Services<span style="color: #ffc451;">.</span></a>
     </h1>
 
     <!-- Navbar -->
@@ -75,7 +75,7 @@
             <li><a href="Withinhere.html">Withinhere</a></li>
             <li><a href="CSR.html">CSR</a></li>
             <li><a href="Scholarship.html">Scholarship Fund</a></li>
-            <!--<li><a href="Career.php">Career</a></li>-->
+            <li><a href="Downloads.html">Downloads</a></li>
           </ul>
         </li>
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -83,7 +83,8 @@
       
     </nav><!-- .navbar -->
     <!-- Get Started Button -->
-    <a href="#contact" class="get-started-btn scrollto">Get Started</a>
+    <a href="#contact" class="get-started-btn scrollto" style="margin-left: 2%; font-size: 15px; border: 1px solid linear-gradient(to right, orange, green, blue);">Get Started</a>
+
   </div>
   
 </header><!-- End Header -->
@@ -95,8 +96,8 @@
 
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
-          <h1>Unlock your financial future<span>.</span></h1>
-          <h2>We are a team of talented Loan experts</h2>
+          <h1>Beyond the Familiar<span>.</span></h1>
+          <h2>Unlock your financial future <br>With a team of talented Loan experts</h2>
         </div>
       </div>
 
@@ -144,7 +145,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="demo3.avif" class="img-fluid" alt="" style="max-width: 110%; height: auto;">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3 style="color: green;">Who we are</h3>
@@ -175,7 +176,9 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="image col-lg-6" style='background-image: url("assets/img/features.jpg");' data-aos="fade-right"></div>
+          <div class="image col-lg-6" style='background-image: url("");' data-aos="fade-right">
+            <img src="demolong.avif" alt="Description of the image" style="width: 100%; height: 550px;">
+          </div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
               <i class="bx bx-receipt"></i>
@@ -204,8 +207,8 @@
     </section><!-- End Features Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
+    <section id="services" class="services" style="background: linear-gradient(to right, orange, green, blue);">
+      <div class="container" data-aos="fade-up" >
 
         <div class="section-title">
           <h2 style="color: green;">Services</h2>
@@ -287,7 +290,9 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row no-gutters">
-          <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start" data-aos="fade-right" data-aos-delay="100"></div>
+          <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start" data-aos="fade-right" data-aos-delay="100">
+            <img src="demo4.avif" alt="Description of the image" style="max-width: 110%; height: 500px;">
+          </div>
           <div class="col-xl-7 ps-4 ps-lg-5 pe-4 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
             <div class="content d-flex flex-column justify-content-center">
               <h3>Helping local individuals and <span style="color: green;"> businesses reinvent themselves</span></h3>
@@ -322,7 +327,7 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="bi bi-award"></i>
-                    <span data-purecounter-start="0" data-purecounter-end="230" data-purecounter-duration="4" class="purecounter"></span>
+                    <span data-purecounter-start="0" data-purecounter-end="300" data-purecounter-duration="4" class="purecounter"></span>
                     <p><strong style="color: blue;">Members:</strong>We take pride in our qualified team of dedicated professionals, ensuring personalized and expert service for every customer we serve.</p>
                   </div>
                 </div>
