--- a/Withinhere.html
+++ b/Withinhere.html
@@ -184,12 +184,17 @@
       <div class="container">
       <div class="row justify-content-center">
       <div class="col-lg-6 text-center">
-        <p><strong>Visit our app for more products and deals</strong></p>
+        <p><strong>Visit our app for more products and deals<br> 
+        As well as view our Withinhere Website 
+        </strong></p>
       </div>
       <div class="col-lg-6 text-center">
         <!-- App Store and Play Store stickers with links -->
         <a href="https://apps.apple.com/us/app/withinhere/id6469520099"><img src="assets/img/appstore.png" alt="App Store" width="120" height="40"></a>
         <a href="https://play.google.com/store/apps/details?id=com.whence.withinhere"><img src="assets/img/googleplay.png" alt="Play Store" width="120" height="40"></a>
+        <a href="https://www.withinhere.com/"><img src="assets/img/www.png" alt="Play Store" width="40" height="40"></a>
+          
+      
       </div>
       </div>
 
