--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="demo3.avif" class="img-fluid" alt="" style="max-width: 110%; height: auto;">
+            <img src="demo3.avif" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3 style="color: green;">Who we are</h3>
@@ -177,7 +177,7 @@
 
         <div class="row">
           <div class="image col-lg-6" style='background-image: url("");' data-aos="fade-right">
-            <img src="demolong.avif" alt="Description of the image" style="width: 100%; height: 550px;">
+            <img src="demolong.avif" alt="Description of the image" style="width: 100%; height: auto; max-width: 100%; max-height: 550px;">
           </div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
@@ -291,7 +291,7 @@
 
         <div class="row no-gutters">
           <div class="image col-xl-5 d-flex align-items-stretch justify-content-center justify-content-lg-start" data-aos="fade-right" data-aos-delay="100">
-            <img src="demo4.avif" alt="Description of the image" style="max-width: 110%; height: 500px;">
+            <img src="demo4.avif" alt="Description of the image" style="width: 100%; height: auto; max-width: 100%; max-height: 500px;">
           </div>
           <div class="col-xl-7 ps-4 ps-lg-5 pe-4 pe-lg-1 d-flex align-items-stretch" data-aos="fade-left" data-aos-delay="100">
             <div class="content d-flex flex-column justify-content-center">
