--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="row justify-content-center" data-aos="fade-up" data-aos-delay="150">
         <div class="col-xl-6 col-lg-8">
           <h1>Beyond the Familiar<span>.</span></h1>
-          <h2>Unlock your financial future <br>With a team of talented Loan experts</h2>
+          <h2>We are always there for you when life happens and you need that financial partner. </h2>
         </div>
       </div>
 
