--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
   <script src="assets/js/main.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-  <script src="//code.tidio.co/pbdcbcodzwa233g6fvgafevyh2jtkpoq.js" async></script>
+  <!--<script src="//code.tidio.co/pbdcbcodzwa233g6fvgafevyh2jtkpoq.js" async></script>-->
   <script>
     $(document).ready(function () {
       $(".mobile-nav-toggle").click(function () {
