--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <div class="row">
           <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="demo3.avif" class="img-fluid" alt="">
+            <img src="/whencepage/assets/img/smilling.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3 style="color: green;">Who we are</h3>
@@ -179,7 +179,7 @@
 
         <div class="row">
           <div class="image col-lg-6" style='background-image: url("");' data-aos="fade-right">
-            <img src="demolong.avif" alt="Description of the image" style="width: 100%; height: auto; max-width: 100%; max-height: 550px;">
+            <img src="/whencepage/assets/img/businesshappy.jpg" alt="Description of the image" style="width: 100%; height: auto; max-width: 100%; max-height: 550px;">
           </div>
           <div class="col-lg-6" data-aos="fade-left" data-aos-delay="100">
             <div class="icon-box mt-5 mt-lg-0" data-aos="zoom-in" data-aos-delay="150">
